--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Timers Assessment Young S</title>
   </head>
   <body>
+    <button>Start</button>
     <script src="main.js"></script>
   </body>
 </html>
